example/computer system architecture/c/good/assert1.c
#include <stdio.h>
#include <assert.h>

int main() {
  int i=1, j=2;
  assert(i==1);
  assert(j==1);
}
